[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-agentcore-codeinterpreter"
version = "0.0.1"
description = "Amazon Bedrock AgentCore Code Interpreter sandbox integration for Deep Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<4.0"
authors = []
keywords = ["aws", "bedrock", "agentcore", "langchain", "deepagents", "sandbox", "code-interpreter"]
dependencies = [
    "deepagents>=0.1.0",
    "bedrock-agentcore>=1.1.4",
    "boto3>=1.42.42",
]

[project.urls]
"Source Code" = "https://github.com/langchain-ai/langchain-aws/tree/main/libs/agentcore-codeinterpreter"
Repository = "https://github.com/langchain-ai/langchain-aws"

[tool.hatch.build.targets.wheel]
packages = ["langchain_agentcore_codeinterpreter"]

[dependency-groups]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=0.20,<2",
    "pytest-socket>=0.7.0",
    "pytest-xdist>=3.8.0,<4.0.0",
]
test_integration = [
    "langchain-tests>=1.1.3",
]
lint = ["ruff>=0.13.0"]
typing = [
    "mypy>=1.17.1",
    "boto3-stubs[essential]>=1.42.5",
]
dev = [
    "boto3-stubs[essential]>=1.42.5",
    "botocore-stubs>=1.42.5",
]

[tool.uv]
prerelease = "allow"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "T201",
]

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "requires: mark tests as requiring a specific library",
    "asyncio: mark tests as requiring asyncio",
    "compile: mark placeholder test used to compile integration tests without running them",
    "scheduled: mark tests to run in scheduled testing",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["langchain_agentcore_codeinterpreter"]
omit = [
    "tests/*",
    "*/tests/*",
    "test_*",
    "*_test.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
