[tool.poetry]
name = "langchain-aws"
version = "0.2.12"
description = "An integration package connecting AWS and LangChain"
authors = []
readme = "README.md"
repository = "https://github.com/langchain-ai/langchain-aws"
license = "MIT"

[tool.poetry.urls]
"Source Code" = "https://github.com/langchain-ai/langchain-aws/tree/main/libs/aws"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain-core = "^0.3.27"
boto3 = ">=1.35.74"
pydantic = ">=2,<3"
numpy = [
  { version = "^1", python = "<3.12" },
  { version = ">=1.26.0,<3", python = ">=3.12" },
]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
syrupy = "^4.0.2"
pytest-asyncio = "^0.23.2"
pytest-watcher = "^0.3.4"
langchain-tests = "0.3.1"
langchain = "^0.3.7"

[tool.poetry.group.codespell]
optional = true

[tool.codespell]
ignore-words-list = "HSA, notIn"

[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.6"



[tool.poetry.group.test_integration]
optional = true

[tool.poetry.group.test_integration.dependencies]



[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.8"



[tool.poetry.group.typing.dependencies]
mypy = "^1.7"
types-requests = "^2.28.11.5"



[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "T201", # print
]

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
exclude = ["notebooks", "samples"]

[tool.coverage.run]
omit = ["tests/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# --strict-markers will raise errors on unknown marks.
# https://docs.pytest.org/en/7.1.x/how-to/mark.html#raising-errors-on-unknown-marks
#
# https://docs.pytest.org/en/7.1.x/reference/reference.html
# --strict-config       any warnings encountered while parsing the `pytest`
#                       section of the configuration file raise errors.
#
# https://github.com/tophat/syrupy
# --snapshot-warn-unused    Prints a warning on unused snapshots rather than fail the test suite.
addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5 --cov=langchain_aws"
# Registering custom markers.
# https://docs.pytest.org/en/7.1.x/example/markers.html#registering-markers
markers = [
  "requires: mark tests as requiring a specific library",
  "asyncio: mark tests as requiring asyncio",
  "compile: mark placeholder test used to compile integration tests without running them",
  "scheduled: mark tests to run in scheduled testing",
]
asyncio_mode = "auto"
